classDiagram
    class IRentStrategy {
        <<interface>>
        +ComputeRent(tile, owner, diceTotal, ownership, rules) int
    }

    class RentManager {
        +TryChargeRent(tenant, tile, diceTotal)
        -EnsureDependencies()
    }

    class ITileRentInfo {
        <<interface>>
        +Name
        +Type
        +Group
        +IsMortgaged
        +HouseCount
        +BaseRent
        +RentByHouses
    }

    class IOwnershipService {
        <<interface>>
        +GetOwner(tile) Player
        +CountOwnedInGroup(owner, group) int
        +CountRailroadsOwned(owner) int
        +OwnsBothUtilities(owner) bool
    }

    class IRuleSet {
        <<interface>>
        +RailroadBaseRent() int
        +UtilityRentSingleMult() int
        +UtilityRentBothMult() int
        +StreetsInGroup(group) int
    }

    RentManager --> IRentStrategy
    RentManager --> ITileRentInfo
    RentManager --> IOwnershipService
    RentManager --> IRuleSet

    class ITurnOrderStrategy {
        <<interface>>
        +NextPlayerIndex(currentIndex, playerCount, state) int
        +HasExtraTurn(currentIndex, state) bool
    }

    class TurnCycleManager {
        +CurrentPlayerIndex
        +Advance() int
        +ResetCycle(count, startIndex)
        +GrantExtraTurn(playerIndex)
        +AddSkip(playerIndex, count)
        +Eliminate(playerIndex)
        -EnsureDeps()
    }

    class IPlayerTurnState {
        <<interface>>
        +IsEliminated(playerIndex) bool
        +IsSkippedThisRound(playerIndex) bool
        +ConsumeSkip(playerIndex)
        +GetExtraTurn(playerIndex) bool
        +SetExtraTurn(playerIndex, value)
    }

    TurnCycleManager --> ITurnOrderStrategy
    TurnCycleManager --> IPlayerTurnState

    class IJailStrategy {
        <<interface>>
        +AttemptEscape(player, dice1, dice2)
        +PayFee(player)
        +UseGetOutOfJailFree(player)
        +ForcedExit(player)
    }
